Add new project food

--- a/di.html
+++ b/di.html
@@ -1,10 +1,11 @@
+Lê Trần Gia Huy
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tài liệu</title>
+    <title>Document</title>
     <link rel="stylesheet" href="dl.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -30,6 +31,11 @@
                     </ul>
                 </div>
                 <div class="down">
+                    <style>
+                        li {
+                            text-align: center;
+                        }
+                    </style>
                     <ul>
                         <li><a href="#">TRANG CHỦ</a></li>
                         <li><a href="#">GIỚI THIỆU</a></li>
@@ -37,91 +43,119 @@
                         <li><a href="#">DU LỊCH TRONG NƯỚC</a></li>
                         <li><a href="#">CẨM NANG DU LỊCH</a></li>
                         <li><a href="#">LIÊN HỆ</a></li>
-                    </ul>
                 </div>
-            </div>
-        </div>
     </header>
-
-    <div class="slider">
-        <div class="item-slider item-slider2"><img src="image/99-thuyen_hoa.jpg" alt="Slider" class="img2"></div>
-    </div>
-
-    <section class="tour-main">
-        <div class="box-wp">
-            <div class="top--tour">
-                <h2 class="title--tour">TOUR BÁN CHẠY NHẤT</h2>
-                <label>Được nhiều khách hàng lựa chọn cho những chuyến đi của mình</label>
-            </div>
-            <div class="list--tour">
-                <div class="item--tour">
-                    <div class="img--tour"><img src="image/tour-thai-lan.png" alt="images"></div>
-                    <div class="content--tour">
-                        <h3 class="name--tour">Bangkok-Pattaya-Buffe 86 Tầng-Đảo Coral</h3>
-                        <p class="price--tour">16.870.000
-                            <span>đ</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="item--tour">
-                    <div class="img--tour"><img src="image/du-lich-San-Diego.jpeg" alt="images"></div>
-                    <div class="content--tour">
-                        <h3 class="name--tour">Tour Du Lịch Mỹ</h3>
-                        <p class="price--tour">54,900,000
-                            <span>đ</span>
-                        </p>
-                    </div>
-                </div>
-                <div class="item--tour">
-                    <div class="img--tour"><img src="image/tau-dien-ven-bien.gif"
-                            alt="images"></div>
-                    <div class="content--tour">
-                        <h3 class="name--tour">Tour Hàn Quốc</h3>
-                        <p class="price--tour">43.980.000
-                            <span>đ</span></p>
-                    </div>
-                </div>
-                <div class="item--tour">
-                    <div class="img--tour"><img src="image/images1089892_1.jpg"
-                            alt="images"></div>
-                    <div class="content--tour">
-                        <h3 class="name--tour">Du lịch hạ long</h3>
-                        <p class="price--tour">5.200.000
-                            <span>đ</span></p>
-                    </div>
-                </div>
-                <div class="item--tour">
-                    <div class="img--tour"><img src="image/du-lich-sai-gon.jpg"
-                            alt="images"></div>
-                    <div class="content--tour">
-                        <h3 class="name--tour">Du lịch Sài Gòn</h3>
-                        <p class="price--tour">8.500.000
-                            <span>đ</span></p>
-                    </div>
-                </div>
-                <div class="item--tour">
-                    <div class="img--tour"><img src="image/TOUR-NHA-TRANG-.png"
-                            alt="images"></div>
-                    <div class="content--tour">
-                        <h3 class="name--tour">Du lịch Nha Trang</h3> 
-                        <p class="price--tour">9,900,000
-                            <span>đ</span></p>
-                    </div>
-        </div>
-
-        <section class="banner">
-            <img src="image/cong ty du lich chuyen tour chau au 3.jpg" alt="banner" class="img3">
-            <div class="content--banner">
-                <div class="box-wp">
-                    <div class="cus-content--banner">
-                        <h2>ROYAL TRAVELCATIONS</h2>
-                        <p>"Một chuyến đi không chỉ là sự di chuyển, đó là một hành trình trải nghiệm."</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </section>
-
 </body>
-
+<div class="slider">
+    <div class="item-slider item-slider2"><img src="image/99-thuyen_hoa.jpg"
+            alt="Slider" class="img2"></div>
+<section class="tour-main">
+    <div class="box-wp">
+        <div class="top--tour">
+            <h2 class="title--tour">TOUR BÁN CHẠY NHẤT</h2>
+            <label>Được nhiều khách hàng lựa chọn cho những chuyến đi của
+                mình</label>
+        </div>
+        <div class="list--tour">
+            <div class="item--tour">
+                <div class="img--tour"><img src="image/tour-thai-lan.png" alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Bangkok-Pattaya-Buffe 86 Tầng-Đảo Coral</h3>
+                    <p class="price--tour">16.870.000
+                        <span>đ</span>
+                    </p>
+                </div>
+            </div>
+            <div class="item--tour">
+                <div class="img--tour"><img src="image/du-lich-San-Diego.jpeg" alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Tour Du Lịch Mỹ</h3>
+                    <p class="price--tour">54,900,000
+                        <span>đ</span>
+                    </p>
+                </div>
+            </div>
+            <div class="item--tour">
+                <div class="img--tour"><img src="image/tau-dien-ven-bien.gif"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Tour Hàn Quốc</h3>
+                    <p class="price--tour">43.980.000
+                        <span>đ</span></p>
+                </div>
+            </div>
+            <div class="item--tour">
+                <div class="img--tour"><img src="image/images1089892_1.jpg"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Du lịch hạ long</h3>
+                    <p class="price--tour">5.200.000
+                        <span>đ</span></p>
+                </div>
+            </div>
+            <div class="item--tour">
+                <div class="img--tour"><img src="image/du-lich-sai-gon.jpg"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Du lịch Sài Gòn</h3>
+                    <p class="price--tour">8.500.000
+                        <span>đ</span></p>
+                </div>
+            </div>
+            <div class="item--tour">
+                <div class="img--tour"><img src="image/TOUR-NHA-TRANG-.png"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Du lịch Nha Trang</h3> 
+                    <p class="price--tour">9,900,000
+                        <span>đ</span></p>
+                </div>
+            </div>
+            <section class="banner">
+                <img src="image/cong ty du lich chuyen tour chau au 3.jpg" alt="banner" class="img3">
+                <div class="content--banner">
+                    <div class="box-wp">
+                        <div class="cus-content--banner">
+                    <h2>ROYAL TRAVELCATIONS</h2>
+                    <p>"Một chuyến đi không chỉ là sự di chuyển, đó là một hành trình trải nghiệm."
+                    </p>
+                </div>
+                </div>
+            </div>
+            </section>
+            <section class="tour-main1">
+                <div class="box-wp">
+                    <div class="top--tour">
+                        <h2 class="title--tour">TOUR DU LỊCH NƯỚC NGOÀI</h2>
+                        <label>Được nhiều khách hàng lựa chọn cho những chuyến đi của
+                            mình</label>
+                    </div>
+                </section>     
+            <div class="item--tour1">
+                <div class="img--tour"><img src="image/cao-nguyen-bokor-du-lich-viet.jpg"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Du lịch Hè - Campuchia </h3>
+                    <p class="price--tour">3.750.000
+                        <span>đ</span></p>
+                </div>
+            </div>
+            <div class="item--tour1">
+                <div class="img--tour"><img src="image/thanh-pho-ottawa-du-lich-viet.jpg"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Du Lịch Hè - Canada</h3>
+                    <p class="price--tour">16,700,000
+                        <span>đ</span></p>
+                </div>
+            </div>
+            <div class="item--tour1">
+                <div class="img--tour"><img src="image/Tour-chau-Au-9-ngay-8-dem-12.jpg"
+                        alt="images"></div>
+                <div class="content--tour">
+                    <h3 class="name--tour">Du lịch Hè - Đức</h3>
+                    <p class="price--tour">62.900.000
+                        <span>đ</span></p>
+                </div>
+            </div>
 </html>
