Add new project food

--- a/di.html
+++ b/di.html
@@ -58,7 +58,7 @@ Lê Trần Gia Huy
         </div>
         <div class="list--tour">
             <div class="item--tour">
-                <div class="img--tour"><img src="image/tour-thai-lan.png" alt="images"></div>
+                <div class="img--tour"><img src="" alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Bangkok-Pattaya-Buffe 86 Tầng-Đảo Coral</h3>
                     <p class="price--tour">16.870.000
@@ -67,7 +67,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <div class="item--tour">
-                <div class="img--tour"><img src="image/du-lich-San-Diego.jpeg" alt="images"></div>
+                <div class="img--tour"><img src="" alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Tour Du Lịch Mỹ</h3>
                     <p class="price--tour">54,900,000
@@ -76,7 +76,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <div class="item--tour">
-                <div class="img--tour"><img src="image/tau-dien-ven-bien.gif"
+                <div class="img--tour"><img src=""
                         alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Tour Hàn Quốc</h3>
@@ -85,7 +85,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <div class="item--tour">
-                <div class="img--tour"><img src="image/images1089892_1.jpg"
+                <div class="img--tour"><img src=""
                         alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Du lịch hạ long</h3>
@@ -94,16 +94,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <div class="item--tour">
-                <div class="img--tour"><img src="image/du-lich-sai-gon.jpg"
-                        alt="images"></div>
-                <div class="content--tour">
-                    <h3 class="name--tour">Du lịch Sài Gòn</h3>
-                    <p class="price--tour">8.500.000
-                        <span>đ</span></p>
-                </div>
-            </div>
-            <div class="item--tour">
-                <div class="img--tour"><img src="image/TOUR-NHA-TRANG-.png"
+                <div class="img--tour"><img src=""
                         alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Du lịch Nha Trang</h3> 
@@ -112,7 +103,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <section class="banner">
-                <img src="image/cong ty du lich chuyen tour chau au 3.jpg" alt="banner" class="img3">
+                <div class="img--tour"><img src="image/cong ty du lich chuyen tour chau au 3.jpg" alt="banner" class="img3"></div>
                 <div class="content--banner">
                     <div class="box-wp">
                         <div class="cus-content--banner">
@@ -131,8 +122,9 @@ Lê Trần Gia Huy
                             mình</label>
                     </div>
                 </section>     
-            <div class="item--tour1">
-                <div class="img--tour"><img src="image/cao-nguyen-bokor-du-lich-viet.jpg"
+            <div class="chung">
+                <div class="item--tour1">
+                <div class="img--tour"><img src=""
                         alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Du lịch Hè - Campuchia </h3>
@@ -141,7 +133,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <div class="item--tour1">
-                <div class="img--tour"><img src="image/thanh-pho-ottawa-du-lich-viet.jpg"
+                <div class="img--tour"><img src=""
                         alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Du Lịch Hè - Canada</h3>
@@ -150,7 +142,7 @@ Lê Trần Gia Huy
                 </div>
             </div>
             <div class="item--tour1">
-                <div class="img--tour"><img src="image/Tour-chau-Au-9-ngay-8-dem-12.jpg"
+                <div class="img--tour"><img src=""
                         alt="images"></div>
                 <div class="content--tour">
                     <h3 class="name--tour">Du lịch Hè - Đức</h3>
@@ -158,4 +150,5 @@ Lê Trần Gia Huy
                         <span>đ</span></p>
                 </div>
             </div>
+            
 </html>
