Add new project food

--- a/di.html
+++ b/di.html
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <section class="why">
-                    <div class="box-wp">
+                    <div class="box-wp box-wp why-container">
                         <div class="top-why">
                             <h2>TẠI SAO NÊN CHỌN ROYAL TRAVELCATIONS</h2>
                         </div>
