--- a/di.html
+++ b/di.html
@@ -252,7 +252,7 @@
                             <h3>VỀ TOUR NỔI BẬT</h3>
                             <div class="tour-images">
                                  <div class="item--tour--f">
-                                                        <div class="img"><img src="image/JTGYbrr4.jpg" alt="tour"></div>
+                                     <img src="tour1.jpg" alt="Tour 1">
                                                         <div class="content--tour--f">
                                                             <h4>Tour Phú Quốc 3N2Đ</h4>
                                                             <a href="#xemthem">XEM THÊM</a>
@@ -260,7 +260,7 @@
                                                     </div>
                                                   
                                                       <div class="item--tour--f">
-                                                        <div class="img"><img src="image/-uploaded-tour-tour-nha-trang_dulichnhatrang3ngay2dem_thumb_1200x1200.jpg" alt="tour"></div>
+                                                        <img src="tour2.jpg" alt="Tour 2">
                                                         <div class="content--tour--f">
                                                             <h4>Tour Nha Trang 3N2Đ</h4>
                                                             <a href="#xemthem">XEM THÊM</a>
@@ -268,7 +268,7 @@
                                                     </div>
                                             
                                                       <div class="item--tour--f">
-                                                        <div class="img"><img src="image/Ho-Hoan-Kiem-Ha-Noi.jpg" alt="tour"></div>
+                                                        <img src="tour3.jpg" alt="Tour 3">
                                                         <div class="content--tour--f">
                                                             <h4>Tour Hà Nội 4N3Đ</h4>
                                                             <a href="#xemthem">XEM THÊM</a>
